# Engram

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
backend/: config.py  main.py  models.py  openrouter.py
backend/api/: main.py
backend/db/: supabase_client.py
backend/eval/: golden_eval.py
backend/ingestion/: article.py  claude_code.py
backend/ingestion/claude_transcripts/: client.py  distiller.py  factory.py  pipeline.py
backend/ingestion/gmail/: chunker.py  client.py  factory.py  pipeline.py
backend/ingestion/notion/: chunker.py  client.py  factory.py  pipeline.py
backend/memory/: cognee_client.py
backend/models/claude_transcripts/: distillation.py
backend/models/gmail/: email.py
backend/models/notion/: note.py
frontend/: bun.lockb  package.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/routes/: __root.tsx  app.tsx  index.tsx  wall.tsx
scripts/: ingest_claude_code.py  run_cognee_ui.py  test_cognee.py
