[project]
name = "engram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cognee>=1.2.2",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.8",
    "langgraph>=1.2.6",
    "notion-client>=3.1.0",
    "trafilatura>=2.1.0",
    "uvicorn>=0.49.0",
]
